<resources>
    <string name="app_name">Money Splitter</string>

    <string name="failed">Failed</string>
    <string name="nothing_to_show">Nothing to show</string>

    <!-- New event-->
    <string name="new_event">New event</string>
    <string name="event_title">Event title</string>
    <string name="event_description">Event description</string>
    <string name="cost">Cost</string>
    <string name="select_picture_title">Select picture</string>
    <string name="wait">Please wait</string>
    <string name="create_event">CREATE EVENT</string>

    <!-- RegLogin -->
    <string name="login_error_text">Sorry, something went wrong</string>
    <string name="registration_create_account_text">CREATE ACCOUNT</string>
    <string name="registration_back_to_login_text">Already a member? Login</string>
    <string name="login_create_account_text">No account yet? Create one</string>
    <string name="login_text">LOGIN</string>
    <string name="registration_error_text">Sorry, something went wrong</string>
    <string name="login_set_test_credits_button">Set Credits</string>

    <!-- User Data-->
    <string name="user_name_text">Name</string>
    <string name="user_email_text">Email</string>
    <string name="user_password_text">Password</string>
    <string name="user_register_text">Register</string>
    <string name="user_surname_text">Surname</string>
    <string name="user_phone_number_text">Phone Number</string>
    <string name="user_credit_card_number_text">Credit card number</string>

    <!-- Add users-->
    <string name="add_users">Add users</string>
    <string name="confirm">Confirm</string>
    <string name="full_name">%s %s</string>

</resources>
